src/objects/DFC_Assessment_Answer__c.object
<CustomObject>
    <fields>
        <fullName>Assessment__c</fullName>
        <label>Assessment</label>
        <referenceTo>DFC_Assessment__c</referenceTo>
        <relationshipLabel>Answers</relationshipLabel>
        <relationshipName>Answers</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Capture_Extra_On_Option__c</fullName>
        <label>Capture Extra On Option</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Capture_Extra_Required__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Capture Extra Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Capture_Extra__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Capture Extra</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Continuation__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Continuation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Entered_Answer__c</fullName>
        <description>The answer text ot the options the user selected</description>
        <label>Entered Answer</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Explanation__c</fullName>
        <description>Text box to give opportunity for explanation</description>
        <label>Explanation</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Extra_Information__c</fullName>
        <label>Extra Information</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Guidance__c</fullName>
        <label>Guidance</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Include_Other__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Include Other Option</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Options__c</fullName>
        <description>The options presented as choices for this question</description>
        <label>Options</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Other_Option_Label__c</fullName>
        <label>Other Option Label</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Other_Selected__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Other Selected</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Question_Style__c</fullName>
        <label>Question Style</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Radio</fullName>
                </value>
                <value>
                    <fullName>Multi</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Question_Text__c</fullName>
        <description>A copy of the question text at the time it was answered</description>
        <label>Question Text</label>
        <required>true</required>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Question__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Question</label>
        <referenceTo>DFC_Assessment_Question__c</referenceTo>
        <relationshipLabel>Answers</relationshipLabel>
        <relationshipName>Answers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Repeat_Per_Action_Area__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Repeat Per Action Area</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Sequence__c</fullName>
        <label>Sequence</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Title__c</fullName>
        <label>Title</label>
        <type>TextArea</type>
    </fields>
    <label>DFC Assessment Answer</label>
    <nameField>
        <displayFormat>DFC-{0000}</displayFormat>
        <label>DFC Answer Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>DFC Assessment Answers</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>